<resources>
    <string name="app_name">Food Ordering App</string>
    <string name="company_name">Cafe House</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="skip">skip</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="user_name">User Name</string>
    <string name="user_image">User Image</string>
    <string name="or_with">or with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
</resources>